--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.4.1
+  firebase_dynamic_links: ^5.0.11
+  uni_links: ^0.5.1
+
   cupertino_icons: ^1.0.5
   flutter_riverpod: ^2.1.3
   go_router: ^6.0.1
@@ -20,7 +24,8 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   easy_localization: ^3.0.1
-  extended_image: ^6.3.4
+  extended_image: ^7.0.0
+  kakao_flutter_sdk: ^1.4.0
 
 dev_dependencies:
   flutter_test:
