--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   geocoding: ^2.0.5
   easy_localization: ^3.0.1
   extended_image: ^7.0.0
-  kakao_flutter_sdk: ^1.4.0
+  kakao_flutter_sdk_share: ^1.4.0
+  package_info_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
